# ARUS

./: .gitignore  apply_model_run.sh  camera_calibration.py  camera_matrix.npy  dist_coeffs.npy  full_run.sh  hand_eye_calibration.py  helper_functions.py  install.sh  params.py  prepare_dataset_run.sh  realsense_takepictures.py  requirements.txt  run.sh  set_config.sh
calibration/: franka_pose.py
ds/: data_augmentation.py  download_and_organize_dataset.py  download_dataset.py  extract_frames.py  organize_dataset.py
recon/: create_fake_pose.py  plot_pointcloud.py  us_reconstruction.py
ros/src/my_package/: CMakeLists.txt  package.xml
ros/src/my_package/launch/: my_package_launcher.launch
ros/src/my_package/msg/: ImagePose.msg
ros/src/my_package/src/: fake_image_publisher.py  helper_functions.py  image_2_pointcloud_node.py  image_publisher.py  image_to_pointcloud_node.py  params.py  plot_pointcloud.py  segmentation_node.py  talker.py  unet.py
segm/: helper_functions.py  run_model.py  train_model.py  unet.py
src/: params.py
src/calibration/: camera_calibration.py  hand_eye_calibration.py
src/ds/: data_augmentation.py  download_and_organize_dataset.py  extract_frames.py
src/recon/: create_fake_pose.py  plot_pointcloud.py
src/segm/: run_model.py  train_model.py  unet.py
stitching/: img_stitching.py
utils/: image_processing_rudiments.py
utils/unet_example/: test.py  unet.py  utils.py
